--- a/index.html
+++ b/index.html
@@ -98,14 +98,14 @@ const resultDiv=document.getElementById('resultDiv')
   
         async function register(event) {
           event.preventDefault();
-          const email = document.getElementById('registerEmail').value;
+          const username = document.getElementById('registerEmail').value;
           const password = document.getElementById('registerPassword').value;
   
           try {
             const response = await fetch('/register', {
               method: 'POST',
               headers: { 'Content-Type': 'application/json' },
-              body: JSON.stringify({ email, password }),
+              body: JSON.stringify({ username, password }),
             });
   
             if (!response.ok) {
@@ -122,14 +122,14 @@ const resultDiv=document.getElementById('resultDiv')
   
         async function login(event) {
           event.preventDefault();
-          const email = document.getElementById('loginEmail').value;
+          const username = document.getElementById('loginEmail').value;
           const password = document.getElementById('loginPassword').value;
   
           try {
             const response = await fetch('/login', {
               method: 'POST',
               headers: { 'Content-Type': 'application/json' },
-              body: JSON.stringify({ email, password }),
+              body: JSON.stringify({ username, password }),
             });
   
             if (!response.ok) {
